# Yahtzee

./: .gitignore  CMakeLists.txt  LICENSE  LISEZ-MOI.md  README.md
.github/workflows/: cmake.yml
include/: AI.hpp  chance.hpp  constant.hpp  dice.hpp  easy.hpp  figure.hpp  game_manager.hpp  inf_part.hpp  level.hpp  player.hpp  roll.hpp  small_straight.hpp  sup_part.hpp  toak.hpp  yahtzee.hpp  yathzee.hpp
include/difficulty/: easy.hpp  hard.hpp  impossible.hpp  level.hpp  medium.hpp
include/entity/: ai.hpp  player.hpp
include/figures/: chance.hpp  constant.hpp  figure.hpp  full.hpp  huge_straight.hpp  small_straight.hpp  square.hpp  sup_part.hpp  toak.hpp  yahtzee.hpp
include/roll/: dice.hpp  roll.hpp
src/: dice.cpp  game_manager.cpp  main.cpp  main_tests.cpp
src/difficulty/: easy.cpp  hard.cpp  impossible.cpp  level.cpp  medium.cpp
src/entity/: ai.cpp  player.cpp
src/figures/: chance.cpp  figure.cpp  full.cpp  huge_straight.cpp  small_straight.cpp  square.cpp  toak.cpp  yahtzee.cpp
src/roll/: dice.cpp  roll.cpp
tests/: dice_tests.cpp  test_main.cpp
tests/difficulty/: test_level.cpp
tests/entity/: test_player.cpp
tests/figures/: test_chance.cpp  test_figure.cpp
tests/mock/: dice_mock.hpp  mock_dice.hpp
tests/roll/: test_dice.cpp
vpp/: yathzee.vpp  yathzee.vpp.bak_000f  yathzee.vpp.bak_001d  yathzee.vpp.bak_002d  yathzee.vpp.bak_003d  yathzee.vpp.bak_004d  yathzee.vpp.bak_005d  yathzee.vpp.bak_006d  yathzee.vpp.bak_007d  yathzee.vpp.bak_008d
vpp/.vpprefdata/: .systemproject.vpp  .systemproject.vpp.bak_000f  .systemproject.vpp.bak_001d  .systemproject.vpp.bak_002d  .vp.preference
vpp/.vpprefdata/LayoutPerspectiveData/: _C4AVxKD.AACAQOEC.lod  _C4AVxKD.AACAQOEMC.lod
vpp/.vpprefdata/nicknames/: 0706Yb6GAqBwAQlS  NickNameIndexing.xml  Y2RGmb6GAqBwAQWi
vpp/.vpprefdata/projectsViewInfo/: 8MtFob6GAqBwAQBO
vpp/.vpprefdata/sideComponents/: Indexing.xml
vpp/.vpprefdata/treestates/: 3b06Yb6GAqBwAQlR  ProjectTreeStateIndexing.xml  a2RGmb6GAqBwAQWj
